[package]
name = "docco"
version = "0.1.0"
authors = ["PaoloN <paolo.napo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.0"
serde_json = "1.0.39"
serde = { version = "1.0.94", features = ["derive"]}
