[package]
name = "docco"
version = "0.1.0"
authors = ["PaoloN <paolo.napo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.96", features = ["derive"]}
serde_json = "1.0.96"
walkdir = "2.3.3"
